porting over arrowleft/arrowright navigation logic.  Need to account for meridiem order after adding the proper rendering order logic for meridiem.  Also fixing background color css variable assignment to work with both light and dark modes

--- a/packages/calcite-components/src/components/input-time-picker/input-time-picker.scss
+++ b/packages/calcite-components/src/components/input-time-picker/input-time-picker.scss
@@ -12,7 +12,7 @@
 
 .container {
   align-items: center;
-  background-color: var(--calcite-ui-foreground-1);
+  background-color: var(--calcite-color-foreground-1);
   border: 1px solid var(--calcite-color-border-input);
   box-sizing: border-box;
   display: flex;
